add description field

--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -247,7 +247,12 @@
 			getTitleField: function() {
 				return (this.menuInfo && this.menuInfo.title_field) ? this.menuInfo.title_field : 'name';
 			},
-
+			/**
+			 * Description Field를 리턴한다.
+			 */
+			getDescriptionField: function() {
+				return (this.entity && this.entity.description_field) ? this.entity.description_field : 'description';
+			},
 			/**
 			 * reload grid data
 			 * 결국 서치 폼에서 다시 검색한다.
@@ -407,6 +412,7 @@
 				var parentGrid = this.ownerElement;
 				var idField = this.getIdField();
 				var titleField = this.getTitleField();
+				var descriptionField = this.getDescriptionField();
 				var row = parentGrid.focusedRow();
 				var dataSet = parentGrid.dataSource();
 
@@ -417,7 +423,7 @@
 					if(this.valueField) {
 						objToChange = this._getSingleValueOfSelectedRecord(selectedResource, this.valueField);
 					} else {
-						objToChange = this._getResourceValueOfSelectedRecord(selectedResource, objToChange, idField, titleField);
+						objToChange = this._getResourceValueOfSelectedRecord(selectedResource, objToChange, idField, titleField, descriptionField);
 					}
 
 					// Grid의 ownerField 데이터 변경 
@@ -439,7 +445,7 @@
 			/**
 			 * 사용자가 선택한 레코드에서 Resource Value (Object)를 리턴 
 			 */
-			_getResourceValueOfSelectedRecord: function(selectedResource, objToChange, idField, titleField) {
+			_getResourceValueOfSelectedRecord: function(selectedResource, objToChange, idField, titleField,descriptionField) {
 					if(typeof(objToChange) === 'undefined' || objToChange === null) {
 						objToChange = {};
 					}
@@ -447,6 +453,7 @@
 					if(typeof(objToChange) == 'object') {
 						objToChange[idField] = selectedResource[idField];
 						objToChange[titleField] = selectedResource[titleField];
+						objToChange[descriptionField] = selectedResource[descriptionField];
 
 					} else if(typeof(objToChange) == 'string') {
 						objToChange = selectedResource[titleField];
