things-resource-selector 수정
things-resource-selector 수정

--- a/things-reference-query.html
+++ b/things-reference-query.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 
 <!--
-  참조 Resource의 다른 필드를 검색 조건에 포함(Join Query)하기 위한 쿼리 필드 
+  참조 Resource의 다른 필드를 검색 조건에 포함(Join Query)하기 위한 쿼리 필드
 -->
 
 <dom-module id="things-reference-query">
@@ -17,7 +17,7 @@
       outline:none;
     }
   </style>
-  
+
   <template>
     <label>[[label]]</label>
     <input is="iron-input" name="[[name]]" bind-value="[[value]]" tabindex$="[[tabIndex]]">
@@ -25,12 +25,14 @@
 
   <script type="text/javascript">
     Polymer({
-      
+
       is: "things-reference-query",
 
       properties: {
         /**
          * element name, Form 안에 들어가는 경우 Ajax 요청시 name : value 형식으로 서버에 요청된다.
+         * ********
+         * @type {String}
          */
         name : {
           type: String,
@@ -38,7 +40,9 @@
         },
 
         /**
-         * element에 표시할 라벨 
+         * element에 표시할 라벨
+         * *******
+         * @type {String}
          */
         label: {
           type: String
@@ -46,6 +50,8 @@
 
         /**
          * Resource Selector로 부터 선택한 값 - id값
+         * *******
+         * @type {String}
          */
         value: {
           type: String
@@ -53,7 +59,9 @@
 
         /**
          * 참조 리소스 명 - Join 쿼리의 alias에 해당 함
-         * ex) creator.name -> 'creator'에 해당 
+         * ex) creator.name -> 'creator'에 해당
+         * *******
+         * @type {String}
          */
         refName: {
           type: String
@@ -61,14 +69,17 @@
 
         /**
          * 참조 필드 명 - Join 쿼리의 필드명에 해당 함
-         * ex) creator.name -> 'name'에 해당 
+         * ex) creator.name -> 'name'에 해당
+         * *******
+         * @type {String}
          */
         fieldName: {
           type: String
         },
         /**
          * tab Index for input field
-         * @type {Number}
+         * *******
+         * @type {String}
          */
         tabIndex :{
           type: String
@@ -76,7 +87,7 @@
       },
 
       /**
-       * 참조 리소스 명, 참조 필드 명이 변경된 이후 
+       * 참조 리소스 명, 참조 필드 명이 변경된 이후
        */
       _computeName: function(refName, fieldName) {
         if(refName && refName.length > 0 && fieldName && fieldName.length > 0) {
@@ -88,6 +99,7 @@
 
       /**
        * value 리턴
+       * *******
        */
       getValue: function() {
         return this.value;
