--- a/things-resource-dialog.html
+++ b/things-resource-dialog.html
@@ -9,7 +9,7 @@
 
 <!--
 ResourceSelector를 위한 다이얼로그.
-애플리케이션에 단 하나만 존재하고 다이얼로그가 오픈 될 때 마다 화면 구성을 다시하여 오픈한다. 
+애플리케이션에 단 하나만 존재하고 다이얼로그가 오픈 될 때 마다 화면 구성을 다시하여 오픈한다.
 단. Full Dialog에서 다시 Resource Dialog가 오픈 될 수 있으므로 FullDialog 보다 작게 구성한다.
 
   Example:
@@ -174,20 +174,26 @@ ResourceSelector를 위한 다이얼로그.
 		properties: {
 			/**
 			* 다이얼로그 타이틀
+			* *******
+			* @type {String}
 			*/
 			title: {
 				type: String
 			},
 
 			/**
-			* Dialog 내에 포함될 뷰 
+			* Dialog 내에 포함될 뷰
+			* *******
+			* @type {Object}
 			*/
 			detailView: {
 				type: Object
 			},
 
 			/**
-			* Dialog가 오픈된 후 콜백 
+			* Dialog가 오픈된 후 콜백
+			* *******
+			* @type {Function}
 			*/
 			openCallback: {
 				type: Function
@@ -195,6 +201,8 @@ ResourceSelector를 위한 다이얼로그.
 
 			/**
 			 * dialog가 close된 후 콜백
+			 * *******
+			 * @type {Function}
 			 */
 			closeCallback: {
 				type: Function
@@ -202,6 +210,8 @@ ResourceSelector를 위한 다이얼로그.
 
 			/**
 			 * 다이얼로그 활성화 여부
+			 * *******
+			 * @type {Boolean}
 			 */
 			active: {
 				type: Boolean,
@@ -211,6 +221,8 @@ ResourceSelector를 위한 다이얼로그.
 			/**
 			 * 중첩되는 다이얼로그가 생길수록
 			 * 다이얼로그의 위치 및 크기를 변경 시키기 위한 변수
+			 * *******
+			 * @type {String}
 			 */
 			dialogSize: {
 				type: String,
@@ -224,7 +236,7 @@ ResourceSelector를 위한 다이얼로그.
 		},
 
 		/**
-		 * 다이얼로그가 오픈된 경우 핸들러 
+		 * 다이얼로그가 오픈된 경우 핸들러
 		 */
 		_openHandler: function(e) {
 			if(e.target.id == 'resource-dialog') {
@@ -250,7 +262,11 @@ ResourceSelector를 위한 다이얼로그.
 				}
 			}
 		},
-
+  /**
+   * getDialog
+   * ******
+   * @return {event} resource-dialog
+   */
 		getDialog: function() {
 			return this.$['resource-dialog'];
 		}
