--- a/things-resource-field.html
+++ b/things-resource-field.html
@@ -6,15 +6,15 @@
 <link rel="import" href="../things-combo/things-combo.html">
 
 <!--
-Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 input field에 표시하는 컴포넌트 
+Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 input field에 표시하는 컴포넌트
 
   Example:
 
-    <things-resource-field 
-      id="resource-selector" 
-      label="Language" 
+    <things-resource-field
+      id="resource-selector"
+      label="Language"
       name="user_id"
-      resource-type="User" 
+      resource-type="User"
       resource-url="users"
       delegate-column="name">
     </things-resource-field>
@@ -49,13 +49,13 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
     <input id="id-value-field" is="iron-input" name="[[submitName]]" bind-value="[[idValue]]" hidden>
     <label>[[label]]</label>
     <input is="iron-input"
-            id="input" 
-            value="[[displayValue]]" 
-            readonly 
-            tabindex="[[tabIndex]]" 
+            id="input"
+            value="[[displayValue]]"
+            readonly
+            tabindex="[[tabIndex]]"
             bind-value="[[idValue]]"
             error-message$="[[errorMessage]]"
-            auto-validate$="[[autoValidate]]" 
+            auto-validate$="[[autoValidate]]"
             required$="[[required]]">
     <paper-icon-button suffix on-tap="clearValue" icon="clear" alt="clear" title="clear" hidden="[[readOnly]]">
     </paper-icon-button>
@@ -70,9 +70,11 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
         /**
          * Form Load시에 서버에서 받은 데이터와 things-resource-field값과 매핑하기 위한 필드명.
-         * 예를 들어 특정 resource에 creator_id가 있다면 서버에서 해당 resource를 조회하면 creator 데이터에 { id : '10', name : '홍길동' } 형식으로 넘어온다. 
+         * 예를 들어 특정 resource에 creator_id가 있다면 서버에서 해당 resource를 조회하면 creator 데이터에 { id : '10', name : '홍길동' } 형식으로 넘어온다.
          * Form에서 things-resource-field가 creator와 매핑되어 있다면 name 필드는 creator가 되고 submitName은 creator_id가 된다.
          * Form 로딩 후에 사용자가 편집을 다시하여 서버에 보낼 경우 submitName으로 id값만 보내게 된다.
+         * ******
+         * @type {String}
          */
         name : {
           type: String
@@ -80,20 +82,26 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
         /**
          * Form Submit시에 서버로 날려줄 Form Field Name
+         * ******
+         * @type {String}
          */
         submitName: {
           type: String
         },
 
         /**
-         * Input field 상단에 표시할 라벨 
+         * Input field 상단에 표시할 라벨
+         * ******
+         * @type {String}
          */
         label: {
           type: String
         },
 
         /**
-         * Resource Selector로 부터 선택한 값 
+         * Resource Selector로 부터 선택한 값
+         * ******
+         * @type {Object}
          */
         value: {
           type: Object,
@@ -102,6 +110,8 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
         /**
          * Resource Selector로 부터 선택한 Object 값의 id
+         * *******
+         * @type {String}
          */
         idValue: {
           type: String,
@@ -109,7 +119,9 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         },
 
         /**
-         * Resource Selector로 부터 선택한 표시 값 
+         * Resource Selector로 부터 선택한 표시 값
+         * *******
+         * @type {string}
          */
         displayValue: {
           type: String
@@ -117,32 +129,40 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
         /**
         * Resource Type - Entity or Menu
-        * 1) Entity : Entity 설정에 의한 Selector 화면 구성 
+        * 1) Entity : Entity 설정에 의한 Selector 화면 구성
         * 2) Menu : Menu 설정에 의한 Selector 화면 구성
+        * ******
+        * @type {String}
         */
         resourceType: {
           type: String,
           value: 'Entity'
         },
-      
+
         /**
          * Resource Selector에서 표시할 리소스 명
          * resourceType이 Menu로 선택되어 있다면 Menu 명, resourceType이 Entity로 선택되어 있다면 Entity 명이 된다.
+         * ******
+         * @type {String}
          */
         resourceName: {
           type: String
         },
 
         /**
-         * Resource Selector를 띄우기 위해 필요한 기본 파라미터 
-         * Format : {Parameter Name1}:{Parameter Value1},{Parameter Name2}:{Parameter Value2},... 
+         * Resource Selector를 띄우기 위해 필요한 기본 파라미터
+         * Format : {Parameter Name1}:{Parameter Value1},{Parameter Name2}:{Parameter Value2},...
+         * ******
+         * @type {String}
          */
         initialParams: {
           type: String
         },
 
         /**
-         * Resource Selector에서 선택한 리소스와 Owner Data간 바인딩하기 위한 정보 
+         * Resource Selector에서 선택한 리소스와 Owner Data간 바인딩하기 위한 정보
+         * ******
+         * @type {String}
          */
         bindFields: {
           type: String
@@ -150,7 +170,9 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
         /**
          * Resource Selector에서 선택한 resource의 id field
-         * Resource Selector에서 선택한 resource의 id값이 이 필드가 가지는 실제 값이 된다. 
+         * Resource Selector에서 선택한 resource의 id값이 이 필드가 가지는 실제 값이 된다.
+         * ******
+         * @type {String}
          */
         resourceIdField: {
           type: String,
@@ -159,7 +181,9 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
         /**
          * Resource Selector에서 선택한 resource의 title field
-         * 화면에 표시할 대표 컬럼명. 
+         * 화면에 표시할 대표 컬럼명.
+         * ******
+         * @type {String}
          */
         resourceTitleField: {
           type: String,
@@ -167,7 +191,9 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         },
 
         /**
-         * 읽기 전용인지 여부 
+         * 읽기 전용인지 여부
+         * *****
+         * @type {Boolean}
          */
         readOnly: {
           type: Boolean,
@@ -175,6 +201,8 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         },
         /**
          * input field에 반드시 값이 포함되어야 함을 결정 합니다.
+         * ******
+         * @type {Boolean}
          */
         required: {
           type: Boolean,
@@ -182,6 +210,8 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         },
         /**
          * 자동 validation check 활성화 여부
+         * *****
+         * @type {Boolean}
          */
         autoValidate: {
           type: Boolean,
@@ -189,6 +219,8 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         },
         /**
          * validate 함수를 통해 return 되는 값으로 초기화 하는 변수
+         * *******
+         * @type {Boolean}
          */
         isValid: {
           type: Boolean,
@@ -196,6 +228,8 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         },
         /**
          * validation check를 통해 isValid의 값이 false일때 화면에 나타나는 errorMessage
+         * ******
+         * @type {String}
          */
         errorMessage: {
           type: String,
@@ -210,7 +244,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         if(idValue==null ||idValue=='') this.value={};
       },
       /**
-       * value값이 변경될 경우 
+       * value값이 변경될 경우
        *
        * @param {Object} value
        */
@@ -227,7 +261,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
       /**
        * Resource Selector로 부터 id, display 값을 설정한다.
-       *
+       ********
        * @param {String} idValue
        * @param {String} displayValue
        */
@@ -239,6 +273,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
       /**
        * 설정된 값을 리턴
+       * ********
        */
       getValue: function() {
         return this.value;
@@ -246,7 +281,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
       /**
        * Resource Selector로 부터 값을 설정
-       *
+       ********
        * @param {Object} value
        */
       setValue: function(value) {
@@ -255,6 +290,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
       /**
        * Open Resource Selector
+       * ********
        */
       openResourceSelector: function() {
         var ownerForm = this.findOwnerForm(this);
@@ -263,13 +299,14 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
 
       /**
        * Resource Selector의 Container 폼을 찾아 리턴
+       * ********
        */
       findOwnerForm: function(element) {
         if(!element.parentElement) {
           return null;
         } else {
-          if(element.parentElement.localName == 'form' || 
-             element.parentElement.localName == 'things-form' || 
+          if(element.parentElement.localName == 'form' ||
+             element.parentElement.localName == 'things-form' ||
              element.parentElement.localName == 'things-search-form') {
             return element.parentElement;
           } else {
@@ -279,6 +316,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
       },
       /**
        * 값을 리셋
+       * ********
        */
       clearValue: function() {
         var obj = {};
@@ -288,6 +326,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
       },
       /**
        * 수동 validation check function
+       * ********
        */
       validate: function() {
         this.isValid = this.$.input.validate();
